# soocheng-ads

./: .env.example  .gitignore  CLAUDE.md  README.md  REPLICATE_NEW_PROJECT.md  pyproject.toml  setup.sh
config/: audience.md  captions_campaign2.json  captions_june2026.json  captions_singleimage.json  captions_singleimage_a.json  captions_singleimage_ah.json  captions_singleimage_b.json  config.sg.yaml  config.yaml  single_image_ah_manifest.json  single_image_manifest.json  single_image_manifest_a.json  single_image_manifest_b.json  video_manifest_a.json  video_manifest_b.json
prompts/: caption_system.md  intel_system.md
scripts/: account_inventory.py  active_coverage.py  add_image_35.py  adset_roas.py  archive_ban_list.py  ban_forensics.py  biz_invest_resolve.py  build_1_1_4_singleimages.py  build_new_acct.py  check_manifest_access.py  consolidate_stockbloom.py  cpa_decision_preview.py  cpa_preview.py  cpa_report.py  daily_report.py  diag_token.py  diagnose_ads.py  dig_officer.py  find_notafraid.py  fix_campaign1.py  inject_golf_video5.py  interest_resolve_3.py  launch_campaign1.py  launch_campaign2.py  list_new_acct.py  new_acct_preflight.py  pause_named.py  pause_wasters.py  plan2_build.py  plan2_resolve.py  proven_ads_export.py  read_adset.py  running_build_my.py  sales_by_adset.py  sales_image_postids.py  sales_pageposts.py  sales_single_image.py  scale_analysis.py  scale_apply.py  scale_apply_2.py  (+30 more)
state/: README.md  entities.json  entities_1_1_4_proven.json  entities_1_1_9.json  entities_c2.json  entities_images.json  entities_img_a.json  entities_img_b.json  (+4 more)
(+65 files in other folders)
