[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adbot"
version = "0.1.0"
description = "Meta ads automation for the STOCK BLOOM trading course (1-1-10, CPL guardrails, weekly OFF/ON)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "tenacity>=8.2",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
adbot = "adbot.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
